--- a/HZ/Makefile
+++ b/HZ/Makefile
@@ -109,7 +109,7 @@ endif
 	$(CXX) $(DEBUG) -c -o $(OBJ)/$@ $^ $(FJCXXFLAGS)
 
 USER=init_couplings.o init_processes.o Born_phsp.o Born.o virtual.o	\
-     real.o phi1_2.o phi3m0.o boost.o breit.o $(PWHGANAL)
+     real.o phi1_2.o phi3m0.o boost.o breit.o pwhg_cpHTO_reweight.o $(PWHGANAL)
 
 
 PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
