--- a/ST_tch/Makefile-old
+++ b/ST_tch/Makefile-old
@@ -57,8 +57,7 @@ INCLUDE =$(wildcard ../include/*.h *.h include/*.h)
 
 ifeq ("$(PDF)","lhapdf")
 LHAPDF_CONFIG=lhapdf-config
-PDFPACK=lhapdf6if.o lhapdf6ifcc.o
-FJCXXFLAGS+= $(shell $(LHAPDF_CONFIG) --cxxflags)
+PDFPACK=lhapdfif.o
 LIBSLHAPDF= -Wl,-rpath,$(shell $(LHAPDF_CONFIG) --libdir)  -L$(shell $(LHAPDF_CONFIG) --libdir) -lLHAPDF
 ifeq  ("$(STATIC)","-static") 
 ## If LHAPDF has been compiled with gfortran and you want to link it statically, you have to include
@@ -120,7 +119,7 @@ MADGRAPH=my_setpara.o switchmom.o printout.o \
 
 %.o: %.cc
 	$(CXX) $(DEBUG) -c -o $(OBJ)/$@ $^ $(FJCXXFLAGS)
-LIBS+=-lz
+
 USER=init_couplings.o init_processes.o Born_phsp.o Born.o virtual.o	\
      real.o $(PWHGANAL) boost.o $(MADGRAPH)
 
@@ -134,7 +133,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 	setstrongcoupl.o integrator.o newunit.o mwarn.o sigsoftvirt.o	\
 	reshufflemoms.o setlocalscales.o validflav.o mint_upb.o  \
 	minlo_checks.o  pwhgreweight.o opencount.o ubprojections.o \
-	sigcollsoft.o sigvirtual.o  $(PDFPACK) $(USER) $(FPEOBJ) lhefread.o pwhg_io_interface.o rwl_weightlists.o rwl_setup_param_weights.o
+	sigcollsoft.o sigvirtual.o  $(PDFPACK) $(USER) $(FPEOBJ)
 
 # target to generate LHEF output
 
@@ -145,7 +144,7 @@ pwhg_main: $(PWHG) $(LIBMADGRAPH)
 
 # target to analyze LHEF output
 LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o	      \
-	opencount.o powheginput.o pwhg_bookhist-multi.o lhefread.o pwhg_io_interface.o rwl_weightlists.o  \
+	opencount.o powheginput.o pwhg_bookhist-multi.o lhefread.o  \
 	newunit.o pwhg_analysis_driver.o $(FPEOBJ)            \
 	$(PWHGANAL) boost.o
 
@@ -154,7 +153,7 @@ lhef_analysis: $(LHEF)
 
 # target to read event file, shower events with HERWIG + analysis
 HERWIG=main-HERWIG.o setup-HERWIG-lhef.o herwig.o boostrot.o powheginput.o \
-	pwhg_bookhist-multi.o lhefread.o pwhg_io_interface.o rwl_weightlists.o opencount.o pdfdummies.o $(FPEOBJ)      \
+	pwhg_bookhist-multi.o lhefread.o opencount.o pdfdummies.o $(FPEOBJ)      \
 	$(PWHGANAL) boost.o
 
 main-HERWIG-lhef: $(HERWIG)
@@ -162,7 +161,7 @@ main-HERWIG-lhef: $(HERWIG)
 
 # target to read event file, shower events with PYTHIA + analysis
 PYTHIA=main-PYTHIA.o setup-PYTHIA-lhef.o pythia.o boostrot.o powheginput.o \
-	pwhg_bookhist-multi.o lhefread.o pwhg_io_interface.o rwl_weightlists.o opencount.o pdfdummies.o $(FPEOBJ)      \
+	pwhg_bookhist-multi.o lhefread.o opencount.o pdfdummies.o $(FPEOBJ)      \
 	$(PWHGANAL) boost.o
 
 main-PYTHIA-lhef: $(PYTHIA)
@@ -199,4 +198,3 @@ MERGE_t_tb=merge_t_tb.o newunit.o random.o cernroutines.o
 merge_t_tb: $(MERGE_t_tb)
 	$(FF) $(patsubst %,$(OBJ)/%,$(MERGE_t_tb)) -o $@
 ##########
-
