--- a/ttb_NLO_dec/Makefile-old
+++ b/ttb_NLO_dec/Makefile-old
@@ -72,8 +72,7 @@ INCLUDE =$(wildcard ../include/*.h *.h include/*.h)
 
 ifeq ("$(PDF)","lhapdf")
 LHAPDF_CONFIG=lhapdf-config
-PDFPACK=lhapdf6if.o lhapdf6ifcc.o
-FJCXXFLAGS+= $(shell $(LHAPDF_CONFIG) --cxxflags)
+PDFPACK=lhapdfif.o
 LIBSLHAPDF= -Wl,-rpath,$(shell $(LHAPDF_CONFIG) --libdir)  -L$(shell $(LHAPDF_CONFIG) --libdir) -lLHAPDF
 ifeq  ("$(STATIC)","-static") 
 ## If LHAPDF has been compiled with gfortran and you want to link it statically, you have to include
@@ -176,7 +175,7 @@ MG5+=$(shell echo $(MG5DIR)/born/*.f | sed -e 's/\.f/\.o/g;s/$(MG5DIR)\/born\///
 	$(CXX) $(DEBUG) -c -o $(OBJ)/$@ $^ $(FJCXXFLAGS)
 
 $(shell ../svnversion/svnversion.sh>/dev/null)
-LIBS+=-lz
+
 USER=init_couplings.o init_processes.o Born_phsp.o PhaseSpaceUtils.o \
      onshellmap.o Born.o virtual.o gen_radiation_hook.o \
      real.o setupBmunu.o isodd.o iseven.o $(PWHGANAL)
@@ -194,7 +193,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o Check_LesHouches.o\
 	setstrongcoupl.o integrator.o newunit.o mwarn.o sigsoftvirt.o	\
 	sigcollsoft.o sigvirtual.o setlocalscales.o validflav.o mint_upb.o  \
 	pwhgreweight.o opencount.o ubprojections.o reshufflemoms.o \
-	$(PDFPACK) $(USER) $(FPEOBJ) lhefread.o pwhg_io_interface.o rwl_weightlists.o rwl_setup_param_weights.o
+	$(PDFPACK) $(USER) $(FPEOBJ)
 
 
 
@@ -208,7 +207,7 @@ libfiles.a: $(LIBFILES)
 
 LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o		\
      opencount.o powheginput.o $(PWHGANAL)	\
-     lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
+     lhefread.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
 
 # target to analyze LHEF output
 lhef_analysis:$(LHEF)
@@ -219,7 +218,7 @@ lhef_analysis:$(LHEF)
 # target to read event file, shower events with HERWIG + analysis
 # HERWIG=main-HERWIG.o setup-HERWIG-lhef.o herwig.o boostrot.o powheginput.o \
 #        reshufflemoms.o\
-#	$(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pdfdummies.o		\
+#	$(PWHGANAL) lhefread.o newunit.o pdfdummies.o		\
 #	random.o opencount.o cernroutines.o $(FPEOBJ)
 #
 # main-HERWIG-lhef: $(HERWIG)
@@ -229,7 +228,7 @@ lhef_analysis:$(LHEF)
 # target to read event file, shower events with PYTHIA + analysis
 # PYTHIA=main-PYTHIA.o setup-PYTHIA-lhef.o pythia.o boostrot.o powheginput.o \
 #        reshufflemoms.o\
-#	$(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pdfdummies.o		\
+#	$(PWHGANAL) lhefread.o newunit.o pdfdummies.o		\
 #	random.o cernroutines.o opencount.o	\
 #	$(FPEOBJ)
 
@@ -239,7 +238,7 @@ lhef_analysis:$(LHEF)
 
 # target to read event file, shower events with PYTHIA8 + analysis
 PYTHIA8=main-PYTHIA8.o pythia8F77.o boostrot.o powheginput.o \
-	$(PWHGANAL) opencount.o lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pdfdummies.o \
+	$(PWHGANAL) opencount.o lhefread.o newunit.o pdfdummies.o \
 	random.o cernroutines.o bra_ket_subroutines.o \
 	$(FPEOBJ)
 
@@ -260,4 +259,3 @@ clean:
 
 pwhg_main.o: svn.version
 lhefwrite.o: svn.version
-
