--- a/ttH/Makefile-old
+++ b/ttH/Makefile-old
@@ -66,8 +66,7 @@ LIBFILES=$(shell  for dir in ./Madlib ./MODEL ./DHELAS ; do cd $$dir ; echo *.[f
 ifeq ("$(PDF)","lhapdf")
 # insert your local path to LHAPDF here:
 LHAPDF_CONFIG=lhapdf-config
-PDFPACK=lhapdf6if.o lhapdf6ifcc.o
-FJCXXFLAGS+= $(shell $(LHAPDF_CONFIG) --cxxflags)
+PDFPACK=lhapdfif.o
 LIBSLHAPDF=-Wl,-rpath,$(shell $(LHAPDF_CONFIG) --libdir)  -L$(shell $(LHAPDF_CONFIG) --libdir) -lLHAPDF
 ifeq  ("$(STATIC)","-static") 
 ## If LHAPDF has been compiled with gfortran and you want to link it statically, you have to include
@@ -111,7 +110,7 @@ endif
 
 %.o: %.cc | $(OBJDIR)
 	$(CXX) $(DEBUG) -c -o $(OBJ)/$@ $^ $(FJCXXFLAGS)
-LIBS+=-lz
+
 USER=init_couplings.o init_processes.o Born_phsp.o Born.o virtual.o \
      tth_interface.o real.o tth_decay.o $(PWHGANAL)
 
@@ -127,7 +126,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 	reshufflemoms.o                                                 \
 	sigcollsoft.o sigvirtual.o  ubprojections.o                     \
 	pwhgreweight.o setlocalscales.o mint_upb.o opencount.o          \
-	validflav.o $(PDFPACK) $(USER) $(FPEOBJ) lhefread.o pwhg_io_interface.o rwl_weightlists.o rwl_setup_param_weights.o
+	validflav.o $(PDFPACK) $(USER) $(FPEOBJ)
 
 LIBDIRMG=$(OBJ)
 LINKMGLIBS=-L$(LIBDIRMG) -lmadgraph -lmodel -ldecay -lvirt -ldhelas3
@@ -141,7 +140,7 @@ pwhg_main: $(PWHG) $(MADLIBS)
 
 LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o		\
      opencount.o powheginput.o printleshouches.o $(PWHGANAL)	\
-     lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
+     lhefread.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
 
 # target to analyze LHEF output
 lhef_analysis:$(LHEF)
@@ -150,7 +149,7 @@ lhef_analysis:$(LHEF)
 
 # target to read event file, shower events with HERWIG + analysis
 HERWIG=main-HERWIG.o setup-HERWIG-lhef.o herwig.o boostrot.o	\
-	powheginput.o $(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o printleshouches.o	\
+	powheginput.o $(PWHGANAL) lhefread.o newunit.o printleshouches.o	\
 	pwhg_analysis_driver.o random.o cernroutines.o opencount.o $(FPEOBJ) 
 
 main-HERWIG-lhef: $(HERWIG)
@@ -158,7 +157,7 @@ main-HERWIG-lhef: $(HERWIG)
 
 # target to read event file, shower events with PYTHIA + analysis
 PYTHIA=main-PYTHIA.o setup-PYTHIA-lhef.o pythia.o boostrot.o powheginput.o \
-	$(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o printleshouches.o		\
+	$(PWHGANAL) lhefread.o newunit.o printleshouches.o		\
 	pwhg_analysis_driver.o random.o cernroutines.o opencount.o	\
 	$(FPEOBJ)
 
@@ -202,4 +201,3 @@ $(OBJDIR):
 	mkdir -p $(OBJDIR)
 
 ##########################################################################
-
