--- a/VBF_HJJJ/Makefile-old
+++ b/VBF_HJJJ/Makefile-old
@@ -62,8 +62,7 @@ INCLUDE =$(wildcard ../include/*.h *.h)
 
 ifeq ("$(PDF)","lhapdf")
 LHAPDF_CONFIG=lhapdf-config
-PDFPACK=lhapdf6if.o lhapdf6ifcc.o
-FJCXXFLAGS+= $(shell $(LHAPDF_CONFIG) --cxxflags)
+PDFPACK=lhapdfif.o
 LIBSLHAPDF= -Wl,-rpath,$(shell $(LHAPDF_CONFIG) --libdir)  -L$(shell $(LHAPDF_CONFIG) --libdir) -lLHAPDF
 ifeq  ("$(STATIC)","-static") 
 ## If LHAPDF has been compiled with gfortran and you want to link it statically, you have to include
@@ -104,7 +103,7 @@ LIBS+=$(LHAPDFLIB) -Lvbfnlo-files -lvbfnlo
 %.o: %.cc
 	$(CC) $(DEBUG) -c -o $(OBJ)/$@ $^ $(FJCXXFLAGS)
 
-LIBS+=-lz
+
 USER=init_couplings.o init_processes.o Born_phsp.o Born.o virtual.o \
 	 convert_coup.o calc_als.o real.o  compreal_hqqqq.o vbfnloinput.o  \
 	 $(PWHGANAL)
@@ -126,7 +125,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o  \
 	mwarn.o sigsoftvirt.o sigcollsoft.o sigvirtual.o              \
 	opencount.o pwhgreweight.o    ubprojections.o \
 	setlocalscales.o mint_upb.o  validflav.o  \
-	$(PDFPACK) $(USER) $(HELAS) $(SYSOBJ)  lhefread.o pwhg_io_interface.o rwl_weightlists.o rwl_setup_param_weights.o
+	$(PDFPACK) $(USER) $(HELAS) $(SYSOBJ) 
 
 
 pwhg_main:$(PWHG) vbfnlo-files/libvbfnlo.a 
@@ -138,7 +137,7 @@ vbfnlo-files/libvbfnlo.a: vbfnlo-files/*f
 
 LHEFANAL=lhef_analysis.o boostrot.o random.o cernroutines.o  \
 	 opencount.o powheginput.o init_processes.o \
-	 lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pwhg_analysis_driver.o \
+	 lhefread.o newunit.o pwhg_analysis_driver.o \
 	 $(PWHGANAL) $(SYSOBJ)
 
 # target to analyze LHEF output
@@ -149,7 +148,7 @@ lhef_analysis:$(LHEFANAL)
 # target to read event file, shower events with PYTHIA + analysis
 PYTHIA=main-PYTHIA.o setup-PYTHIA-lhef.o pythia.o \
 	boostrot.o powheginput.o   \
-        lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o \
+        lhefread.o newunit.o \
 	pwhg_analysis_driver.o pdfdummies.o \
 	random.o cernroutines.o opencount.o  $(PWHGANAL) $(SYSOBJ)
 
@@ -162,5 +161,4 @@ clean:
         vbfnlo-files/*/*.o \
         pwhg_main lhef_analysis \
 	main-PYTHIA-lhef
-
 
