--- a/Wp_Wp_J_J/Makefile-old
+++ b/Wp_Wp_J_J/Makefile-old
@@ -72,8 +72,7 @@ ifeq ("$(PDF)","lhapdf")
 # LHAPDF may be compiled with ifort or gfortran. The user should
 # set up the correct path.
 LHAPDF_CONFIG=~/Pheno/PDFpacks/lhapdf-5.8.4-$(FC)/bin/lhapdf-config
-PDFPACK=lhapdf6if.o lhapdf6ifcc.o
-FJCXXFLAGS+= $(shell $(LHAPDF_CONFIG) --cxxflags)
+PDFPACK=lhapdfif.o
 LIBSLHAPDF= -Wl,-rpath,$(shell $(LHAPDF_CONFIG) --libdir)  -L$(shell $(LHAPDF_CONFIG) --libdir) -lLHAPDF
 ifeq  ("$(STATIC)","-static") 
 ## If LHAPDF has been compiled with gfortran and you want to link it statically, you have to include
@@ -114,7 +113,7 @@ LIBS+= -LF90/obj-$(FC) -lWpWp2j -L$(QCDLOOP)/ql -L$(QCDLOOP)/ff -lqcdloop -lff
 
 %.o: %.cc
 	$(CXX) $(DEBUG) -c -o obj-$(FC)/$@ $^ $(FJCXXFLAGS)
-LIBS+=-lz
+
 USER=init_couplings.o init_processes.o Born_phsp.o Born.o virtual.o	\
      real.o $(PWHGANAL)	boost.o phi1_2.o phi3m0.o breit.o
 
@@ -128,7 +127,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 	setstrongcoupl.o integrator.o newunit.o mwarn.o sigsoftvirt.o	\
 	sigcollsoft.o sigvirtual.o  setlocalscales.o validflav.o mint_upb.o  \
         pwhgreweight.o opencount.o ubprojections.o utils.o reshufflemoms.o   \
-        $(PDFPACK) $(USER) $(FPEOBJ) lhefread.o pwhg_io_interface.o rwl_weightlists.o rwl_setup_param_weights.o
+        $(PDFPACK) $(USER) $(FPEOBJ)
 
 
 # target to generate LHEF output
@@ -154,7 +153,7 @@ $(QCDLOOP)/ff/libff.a:
 
 LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o		\
      opencount.o powheginput.o pwhg_bookhist.o $(PWHGANAL)	\
-     lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
+     lhefread.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
 
 # target to analyze LHEF output
 lhef_analysis:$(LHEF)
@@ -164,7 +163,7 @@ lhef_analysis:$(LHEF)
 
 # target to read event file, shower events with HERWIG + analysis
 HERWIG=main-HERWIG.o setup-HERWIG-lhef.o herwig.o boostrot.o	\
-	powheginput.o pwhg_bookhist.o $(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o	\
+	powheginput.o pwhg_bookhist.o $(PWHGANAL) lhefread.o	\
 	pdfdummies.o opencount.o $(FPEOBJ) 
 
 main-HERWIG-lhef: $(HERWIG)
@@ -172,7 +171,7 @@ main-HERWIG-lhef: $(HERWIG)
 
 # target to read event file, shower events with PYTHIA + analysis
 PYTHIA=main-PYTHIA.o setup-PYTHIA-lhef.o pythia.o boostrot.o powheginput.o		\
-	pwhg_bookhist.o $(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pdfdummies.o	\
+	pwhg_bookhist.o $(PWHGANAL) lhefread.o newunit.o pdfdummies.o	\
 	pwhg_analysis_driver.o random.o cernroutines.o opencount.o	\
 	$(FPEOBJ)
 
@@ -186,4 +185,3 @@ clean:
 	cd QCDLoop-1.9-$(FC); make clean ; cd ql ; make clean ; cd ../ff/ ; make clean
 	cd F90 ; make FC=$(FC) clean
 	rm -f obj-$(FC)/*.o pwhg_main lhef_analysis main-HERWIG-lhef main-PYTHIA-lhef
-
